# QuantOS

./: (AI) Determinism Audit Report - Tournament Strategies.md  (AI) Error Signaling Audit Report - Factor Timing.md  (AI) Factor Attribution Report - Momentum Factor.md  (AI) QuantOS Audit and Roadmap.md  (AI) QuantOS External Repository Due Diligence - 2026-07-13.html  (AI) QuantOS Target Architecture Blueprint - 2026-07-13.html  (AI) Regime Stability Report.md  (AI) Tech Stack Research.md  (AI) Walk-Forward Extension - Regime Filter Validation.md  (AI) Weekly Research Log Template.md  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTEXT.md  EXECUTION_PLAN.md  INVENTORY.md  LICENSE  PRD.md  PROJECT_INDEX.md  README.md  STATUS.md  download_data.py  factor_attribution.py  fetch_universe.py  momentum_backtest.py  nifty500_universe.csv  paper_trader.py  pyproject.toml  requirements-lock.txt  run_today.ps1  transaction_costs.py
.ai/: AI_CONTEXT.md  CURRENT_TASK.md  PROJECT_STATE.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  finding.md
.github/workflows/: ci.yml
api/: __init__.py  app.html  collectors.py  server.py
dashboard/: __init__.py  template.html
data/: failed_tickers.csv  journal.md  paper_state.json  universe_pit.db
data/cache/: 360ONE_NS.csv  3MINDIA_NS.csv  AADHARHFC_NS.csv  AARTIIND_NS.csv  AAVAS_NS.csv  ABBOTINDIA_NS.csv  ABB_NS.csv  ABCAPITAL_NS.csv  ABDL_NS.csv  ABFRL_NS.csv  ABREL_NS.csv  ABSLAMC_NS.csv  ACC_NS.csv  ACE_NS.csv  ACUTAAS_NS.csv  ADANIENSOL_NS.csv  ADANIENT_NS.csv  ADANIGREEN_NS.csv  ADANIPORTS_NS.csv  ADANIPOWER_NS.csv  AEGISLOG_NS.csv  AFFLE_NS.csv  AIAENG_NS.csv  AIIL_NS.csv  AJANTPHARM_NS.csv  ALKEM_NS.csv  AMBER_NS.csv  AMBUJACEM_NS.csv  ANANDRATHI_NS.csv  ANANTRAJ_NS.csv  ANGELONE_NS.csv  ANURAS_NS.csv  APARINDS_NS.csv  APLAPOLLO_NS.csv  APOLLOHOSP_NS.csv  APOLLOTYRE_NS.csv  APTUS_NS.csv  ARE&M_NS.csv  ASAHIINDIA_NS.csv  ASHOKLEY_NS.csv  (+419 more)
data/cache_factors/: MOM100.csv  UTI_MOM30.csv
data/cache_index/: NSEI.csv
data/results/: equity_comparison.csv  equity_curve.csv
docs/00_governance/: (AI) Decision Record - Point-in-Time Universe.md  (AI) Program Log - 2026-07-21.md  (AI) Program Log - 2026-07-22.md  (AI) Program Log and Audit - 2026-07-14.md  (AI) QuantOS Constitution.md  (AI) QuantOS Foundation.md  Risk Register.md  Technical Debt Register.md
docs/01_audits/: (AI) External Repo Addendum - ai-hedge-fund and Vibe-Trading - 2026-07-14.md  (AI) QuantOS Independent Audit - 2026-07-13.html  (AI) QuantOS Institutional Due Diligence - 2026-07-21.md  (AI) QuantOS OSS Adoption Review - 2026-07-13.html
docs/03_research/: (AI) Factor Attribution Report - Market + Size.md  (AI) Final Tournament Observability Audit.md  (AI) Historical Live Signal Verification Report.md  (AI) Historical Research Phase - Closure Summary.md  (AI) India Execution Systems - Verified Landscape - 2026-07-14.md  (+5 more)
experiments/: .gitkeep
infra/: .gitkeep
quantos_core/: __init__.py
research/: __init__.py
services/: __init__.py
strategies_registry/: .gitkeep  momentum_v1.yaml
tests/: conftest.py  test_desktop_app.py  test_inventory_classifier.py  test_momentum_backtest_characterization.py  test_operator_console.py  test_paper_equity_history.py  test_selftest_wrappers.py  test_transaction_costs.py
tools/: backup_state.ps1  broker_connect_check.py  build_dashboard.py  capture_golden.py  create_desktop_shortcut.ps1  daily_run.ps1  daily_watchdog.ps1  demo_pipeline.py  desktop_app.py  fetch_bhavcopy.py  generate_inventory.py  kill_switch.py  paper_metrics.py  register_watchdog_task.ps1  run_paper_cycle.py  seed_universe_snapshot.py  send_alert.ps1  verify_determinism.py
(+100 files in other folders)
